Copiamos html y css de codigo facilito

--- a/index.html
+++ b/index.html
@@ -1,42 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+	<title>Curso de Git</title>
+	
+	<!-- Estilos -->
+	<link rel="stylesheet" href="styles/style.css">
+	
+	<!-- Normalize -->
+	<link rel="stylesheet" href="styles/normalize.css">
+
+	<!-- Google Fonts -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" type="text/css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" type="text/css">
+
+	<!-- Font Awesome -->
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+	<!-- Metas -->
 	<meta charset="UTF-8">
-	<title>Repasando HTML</title>
-	<link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
-	<h1>Tablas</h1>
-	<table>
-		<tr>
-			<td colspan="3">A</td>
-			<td>B</td>
-		</tr>
+	<!-- Portada -->
+	<div class="cover">
+		<div class="content">
+			<figure class="logo">
+				<img src="images/logo.png" alt="">
+			</figure>
+			<h1>Curso de Git</h1>
+			<a href="", class="icon fa fa-arrow-down"></a>
+		</div>
+	</div>
 
-		<tr>
-			<td>C</td>
-			<td colspan="2">D</td>
-			<td>E</td>
-		</tr>
+	<!-- Bienvenida -->
+	<section class="info">
+		<h2>Bienvenido</h2>
 
-		<tr>
-			<td colspan="4">F</td>
-		</tr>
+		<div class="infoContent">
+			
+			<article class="block">
+				<i class="icon-social fa fa-youtube-play"></i>
+				<h3>Youtube</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos exercitationem ipsum esse atque, at nobis architecto accusantium, alias mollitia aliquid consequatur totam officiis quis, soluta sequi cumque nesciunt quam dolores!</p>
+				<a href="#", class="btn">Ver</a>
+			</article>
+		
+			<article class="block">
+				<i class="icon-social fa fa-facebook-official"></i>
+				<h3>Facebook</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos exercitationem ipsum esse atque, at nobis architecto accusantium, alias mollitia aliquid consequatur totam officiis quis, soluta sequi cumque nesciunt quam dolores!</p>
+				<a href="#", class="btn">Ver</a>
+			</article>
 
-		<tr>
-			<td>G</td>
-			<td>H</td>
-			<td>I</td>
-			<td>J</td>
-		</tr>
-	</table>
-	<h1>Formularios</h1>
-	<form action="https://www.google.com/search" method="get">
-		<label for="q">Busqueda google:</label>
-		<input type="text" name="q">
-		<input type="submit" value="Buscar">
-
-
-	</form>
+			<article class="block">
+				<i class="icon-social fa fa-twitter"></i>
+				<h3>Twitter</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos exercitationem ipsum esse atque, at nobis architecto accusantium, alias mollitia aliquid consequatur totam officiis quis, soluta sequi cumque nesciunt quam dolores!</p>
+				<a href="#", class="btn">Ver</a>
+			</article>
+		</div>
+	
+	</section>
 </body>
 </html>
