--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 				<img src="images/logo.png" alt="">
 			</figure>
 			<h1>Curso de Git</h1>
-			<a href="", class="icon fa fa-arrow-down"></a>
+			<a href="#bienvenida", class="icon fa fa-arrow-down"></a>
 		</div>
 	</div>
 
 	<!-- Bienvenida -->
 	<section class="info">
-		<h2>Bienvenido</h2>
+		<h2 id="bienvenida">Bienvenido</h2>
 
 		<div class="infoContent">
 			
@@ -58,6 +58,14 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos exercitationem ipsum esse atque, at nobis architecto accusantium, alias mollitia aliquid consequatur totam officiis quis, soluta sequi cumque nesciunt quam dolores!</p>
 				<a href="#", class="btn">Ver</a>
 			</article>
+
+			<article class="block">
+				<i class="icon-social fa fa-github"></i>
+				<h3>Github</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos exercitationem ipsum esse atque, at nobis architecto accusantium, alias mollitia aliquid consequatur totam officiis quis, soluta sequi cumque nesciunt quam dolores!</p>
+				<a href="#", class="btn">Ver</a>
+			</article>
+
 		</div>
 	
 	</section>
