Agregamos article de instagram

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
 				<a href="#", class="btn">Ver</a>
 			</article>
 
+			<article class="block">
+				<i class="icon-social fa fa-instagram"></i>
+				<h3>Instagram</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos exercitationem ipsum esse atque, at nobis architecto accusantium, alias mollitia aliquid consequatur totam officiis quis, soluta sequi cumque nesciunt quam dolores!</p>
+				<a href="#", class="btn">Ver</a>
+			</article>
+
 		</div>
 	
 	</section>
